# algoc

./: CMakeLists.txt
src/: CMakeLists.txt  arena.c  arena.h  assert.c  assert.h  atom.c  atom.h  chan.c  chan.h  cset.py  except.c  except.h  generate_scatter.py  getword.c  getword.h  list.c  list.h  mem.c  mem.h  memchk.c  minunit.h  scatter.c  sem.h  table.c  table.h  test_except.c  test_list.c  test_signal.c  test_text.c  text.c  text.h  thread.h  wf.c
